# sports-prediction

./: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  alembic.ini  docker-compose.yml  plan.MD  pyproject.toml  training.md
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 0001_create_hypertables.py  0001_initial_schema.py  0002_add_odds_weather.py  0003_add_discord_parlays.py
docs/: architecture.md
docs/paper/: paper-1-05-23-2026.tex  paper-2-05-24-2026.tex  paper-3-05-25-2026.tex
scripts/: backfill_mlb_sp_features.py  bootstrap_backfill.sh  build_mlb_features.py  build_nba_features.py  check_health.py  check_nba_picks.py  deep_eval.py  dk_props.py  fix_missing_nba_game.py  gather_mlb_training_data.py  gather_nba_training_data.py  init_db.sql  ml_all.py  ml_winners.py  mlb_data_status.py  nba_data_status.py  parlay_record.py  props_all.py  props_winners.py  resolve_nba_parlays.py
src/: cli.py
src/api/: auth.py  deps.py  main.py
src/api/routes/: games.py  health.py  models.py  predictions.py
src/core/: config.py  logging.py  security.py  time.py
src/db/: session.py
src/db/models/: __init__.py  auth.py  base.py  discord_parlay.py  odds.py  prediction.py  sport.py
src/db/repositories/: games.py  predictions.py
src/features/: common.py
src/features/mlb/: matchup.py  player.py  team.py
src/features/nba/: matchup.py  player.py  team.py
src/ingest/: common.py
src/ingest/mlb/: client.py  games.py  live.py  players.py  weather.py
src/ingest/nba/: client.py  games.py  live.py  players.py
src/ingest/odds/: client.py  draftkings.py  fanatics.py  fanduel.py  games.py  kalshi.py
src/models/: parlay.py  registry.py  score.py  train_props.py  train_winner.py
src/models/configs/: mlb_winner.py  nba_winner.py
src/models/eval/: metrics.py  report.py  walk_forward.py
src/notify/: __main__.py  dedup.py  discord.py  discord_bot.py  discord_embeds.py  discord_views.py  enzo.py  listener.py  telegram.py
src/tasks/: celery_app.py  feature_tasks.py  ingest_tasks.py  outcome_tasks.py  schedule.py  score_tasks.py  train_tasks.py
tests/: conftest.py
tests/integration/: test_auth_flow.py  test_feature_parity.py  test_no_leakage.py
tests/unit/: test_dedup.py  test_features.py  test_security.py  test_time.py
