[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prediction"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    # Cache / Queue
    "redis[hiredis]>=5.2.0",
    "celery[redis]>=5.4.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    # API utilities
    "slowapi>=0.1.9",
    "starlette-prometheus>=0.10.0",
    "prometheus-client>=0.21.0",
    # Logging
    "structlog>=24.4.0",
    # CLI
    "typer[all]>=0.15.0",
    # HTTP
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    # ML core
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    "scikit-learn>=1.6.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "optuna>=4.1.0",
    "mlflow>=2.19.0",
    "shap>=0.46.0",
    # Sports data
    "nba_api>=1.5.0",
    "MLB-StatsAPI>=1.7.2",
    "pybaseball>=2.2.7",
    "pdfplumber>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "hypothesis>=6.122.0",
    "testcontainers[postgresql,redis]>=4.9.0",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
prediction = "src.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008", "N805"]

[tool.ruff.lint.per-file-ignores]
"src/models/**" = ["N806", "N803"]
"src/features/common.py" = ["N806"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "nba_api.*",
    "statsapi.*",
    "pybaseball.*",
    "pdfplumber.*",
    "mlflow.*",
    "shap.*",
    "optuna.*",
    "celery.*",
    "redis.*",
    "slowapi.*",
    "starlette_prometheus.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"
markers = [
    "integration: requires live Postgres + Redis containers (via testcontainers)",
]
